force-app/main/default/objects/Timesheet_Entry__c/fields/Contract_Resource__c.field-meta.xml
<CustomField>
    <fullName>Contract_Resource__c</fullName>
    <label>Contract Resource</label>
    <referenceTo>Contract_Resource__c</referenceTo>
    <relationshipLabel>Timesheet Entries</relationshipLabel>
    <relationshipName>Timesheet_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>