force-app/main/default/objects/Timesheet_Entry__c/fields/InternalApproval__c.field-meta.xml
<CustomField>
    <fullName>InternalApproval__c</fullName>
    <label>Internal approval</label>
    <type>DateTime</type>
</CustomField>