force-app/main/default/objects/Timesheet_Entry__c/fields/InternalApprovalBy__c.field-meta.xml
<CustomField>
    <fullName>InternalApprovalBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal approval by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Timesheet_Entries1</relationshipName>
    <type>Lookup</type>
</CustomField>