force-app/main/default/objects/Timesheet_Entry__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Timesheet Entries</relationshipLabel>
    <relationshipName>Timesheet_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>