force-app/main/default/objects/Timesheet_Entry__c/fields/Timesheet_Signature__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Signature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Signature</label>
    <referenceTo>Timesheet_Signature__c</referenceTo>
    <relationshipLabel>Timesheet Entries</relationshipLabel>
    <relationshipName>Timesheet_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>