force-app/main/default/objects/Timesheet_Entry__c/fields/TimesheetId__c.field-meta.xml
<CustomField>
    <fullName>TimesheetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TimesheetId</label>
    <referenceTo>Timesheet__c</referenceTo>
    <relationshipLabel>Timesheet Entries</relationshipLabel>
    <relationshipName>Timesheet_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>